memo/memo-with-references/tests/fail-cloneable-must-implement-clone.stderr
error[E0599]: no method named `clone` found for struct `NoClone` in the current scope
 --> tests/fail-cloneable-must-implement-clone.rs:7:1
  |
5 | struct NoClone;
  | -------------- method `clone` not found for this struct
6 |
7 | #[memo('a)]
  | ^^^^^^^^^^^ method not found in `NoClone`
  |
  = help: items from traits can only be used if the trait is implemented and in scope
  = note: the following trait defines an item `clone`, perhaps you need to implement it:
          candidate #1: `Clone`
  = note: this error originates in the attribute macro `memo` (in Nightly builds, run with -Z macro-backtrace for more info)
